fix overlap table, add loading print sjp & disable button create Admission Payer (#349)

--- a/src/app/views/widgets/modal-search-payer/modal-search-payer.component.css
+++ b/src/app/views/widgets/modal-search-payer/modal-search-payer.component.css
@@ -1,8 +1,8 @@
 ::ng-deep .modal-searchPatient .modal-dialog { max-width: 100%; width: 60vw}
-::ng-deep .modal-searchPatient .modal-dialog .modal-body { max-height:80vh; overflow-y: scroll}
+::ng-deep .modal-searchPatient .modal-dialog .modal-body { max-height:20vh; overflow-y: scroll}
 
 .search-patient-modal {
-  width: 50vw;
+  width: 100%;
   min-height: 40rem!important;
   height: inherit;
   max-height: 80vh;
